--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       restart: always
       environment:
         - CHOKIDAR_USEPOLLING=true
+
       build: 
         context: .
         dockerfile: Dockerfile.dev
@@ -12,4 +13,18 @@ services:
       volumes:
         - /app/node_modules
         - .:/app
+      depends_on:
+        - "db"
+      
+
+    db:
+      image: postgres 
+      volumes:
+         - ./tmp/db:/var/lib/postgresql/data
+      environment: 
+          POSTGRES_PASSWORD: DB_PASSWORD
+          POSTGRES_USER: DB_USER
+          POSTGRES_DB: DB
+      ports:
+        - "5432:5432"
 
