--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,10 @@ services:
 
     db:
       image: postgres 
-      volumes:
-         - ./tmp/db:/var/lib/postgresql/data
       environment: 
-          POSTGRES_PASSWORD: DB_PASSWORD
-          POSTGRES_USER: DB_USER
-          POSTGRES_DB: DB
+          POSTGRES_PASSWORD: ${DB_PASSWORD}
+          POSTGRES_USER: ${DB_USER}
+          POSTGRES_DB: ${DB_USER}
       ports:
         - "5432:5432"
 
