--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
     db:
       image: postgres 
       environment: 
-          POSTGRES_PASSWORD: ${DB_PASSWORD}
-          POSTGRES_USER: ${DB_USER}
-          POSTGRES_DB: ${DB_USER}
+          POSTGRES_PASSWORD: DB_PASS
+          POSTGRES_USER: DB_USER
+          POSTGRES_DB: DB
       ports:
         - "5432:5432"
 
