--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-unless": "^0.5.0",
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
