--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+    "migrate": "knex migrate:rollback && knex migrate:latest"
   },
   "repository": {
     "type": "git",
