--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,16 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://api:5000",
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "0.20.0",
     "cloudinary": "1.23.0",
     "cloudinary-react": "^1.6.8",
+    "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
