properly configured corse and connected frontend to backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,44 @@
-version: '3'
+version: "3"
 services:
-    api:
-      restart: always
-      environment:
-        - CHOKIDAR_USEPOLLING=true
-        - DB_HOST=${DB_HOST}
-        - DB_PORT=${DB_PORT}
-        - DB_USER=${DB}
-        - DB=${postgres}
-        - DB_PASSWORD=${DB_PASSWORD}
-        - JWTSECRET=${JWTSECRET}
-      build: 
-        context: ./api
-        dockerfile: Dockerfile.dev
-      ports:
-        - "5000:5000"
-      volumes:
-        - /app/node_modules
-        - ./api:/app
-      depends_on:
-        - "db"
-    client:
-      environment: 
-        - CHOKIDAR_USEPOLLING=true
-      build: 
-         context: ./client 
-         dockerfile: Dockerfile.dev
-      ports: 
-        - "3000:3000"
-      volumes:
-        - /app/node_modules
-        - ./client:/app
+  api:
+    restart: always
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB}
+      - DB=${postgres}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - JWTSECRET=${JWTSECRET}
+    build:
+      context: ./api
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5000:5000"
+    volumes:
+      - /app/node_modules
+      - ./api:/app
+    depends_on:
+      - "db"
+  client:
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+    links:
+      - api
+    depends_on:
+      - "api"
 
-    db:
-      image: postgres 
-      environment: 
-          - POSTGRES_PASSWORD=${DB_PASSWORD}
-      ports:
-        - "5432:5432"
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    ports:
+      - "5432:5432"
