--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
   client:
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_CLOUDINARYCLOUD=${REACT_APP_CLOUDINARYCLOUD}
+      - REACT_APP_CLOUDINARYPRESET=${REACT_APP_CLOUDINARYPRESET}
     build:
       context: ./client
       dockerfile: Dockerfile.dev
