--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "axios": "0.20.0",
+    "axios": "^0.21.1",
     "cloudinary": "1.23.0",
     "cloudinary-react": "^1.6.8",
     "graphql": "^15.4.0",
@@ -16,6 +16,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "5.2.0",
+    "swiper": "^6.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
