--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "An application to create recommendations",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "knex migrate:rollback && knex migrate:latest"
