fixed a typo in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
 script: 
   - docker build -t vic30004/multi-client ./client 
   - docker build -t vic30004/multi-nginx ./nginx 
-  - docker build -t vic30004/multi-server ./server 
-  
+  - docker build -t vic30004/multi-api ./api 
+
