updated travis to push to docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,11 @@ script:
   - docker build -t vic30004/multi-client ./client 
   - docker build -t vic30004/multi-nginx ./nginx 
   - docker build -t vic30004/multi-api ./api 
+  # Login to docker CLI
+  -echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Push images to docker hub
+  - docker push vic30004/multi-client
+  - docker push vic30004/multi-nginx
+  - docker push vic30004/multi-api
+
 
