--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "knex migrate:rollback && knex migrate:latest"
+    "migrate": "knex migrate:latest",
+    "migrateRoll":"knex migrate:rollback && knex migrate:latest"
   },
   "repository": {
     "type": "git",
