--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - CHOKIDAR_USEPOLLING=true
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
-      - DB_USER=${DB}
-      - DB=${postgres}
+      - DB_USER=${DB_USER}
+      - DB=${DB}
       - DB_PASSWORD=${DB_PASSWORD}
       - JWTSECRET=${JWTSECRET}
     build:
