testing heroku yml

--- a/heroku.yml
+++ b/heroku.yml
@@ -4,7 +4,9 @@ setup:
       as: DATABASE
 build:
   docker:
-    web: Dockerfile
+    api: api/Dockerfile
+    client: client/Dockerfile
+    nginx: nginx/Dockerfile
   config:
     NODE_ENV: production
 run:
