--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: ./nginx
       dockerfile: Dockerfile.dev
     depends_on:
-        - api
-        - client
+      - api
+      - client
     ports:
-      - '3050:80'
+      - "3050:80"
   api:
     restart: always
     environment:
@@ -17,6 +17,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_USER=${DB_USER}
+      - DATABASE_URL=${DATABASE_URL}
       - DB=${DB}
       - DB_PASSWORD=${DB_PASSWORD}
       - JWTSECRET=${JWTSECRET}
@@ -51,6 +52,7 @@ services:
   db:
     image: postgres
     environment:
+      - DATABASE_URL=${DATABASE_URL}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
       - "5432:5432"
