--- a/heroku.yml
+++ b/heroku.yml
@@ -9,5 +9,10 @@ build:
     nginx: nginx/Dockerfile
   config:
     NODE_ENV: production
-run:
-  web: npm start
+run: 
+  api: npm run start & npm run migrate 
+release:
+  image: api
+  image: client
+  image: nginx 
+  
