--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,7 @@
 FROM nginx
 COPY ./default.conf /etc/nginx/conf.d/default.conf 
 
-COPY default.conf.template /etc/nginx/conf.d/default.conf.template
 
 
-CMD /bin/bash -c "envsubst '\$CLIENTPORT' '\$SERVERPORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
+CMD /bin/bash -c "envsubst '\$CLIENTPORT' '\$SERVERPORT' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
 
