--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,9 @@
 upstream client {
-    server client:$CLIENTPORT;
+    server client:3000;
 }
 
 upstream api {
-    server api:$SERVERPORT;
+    server api:5000;
 }
 
 server {
