--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,4 @@
 FROM nginx
-COPY ./default.conf /etc/nginx/conf.d/default.conf 
+COPY ./default.prod.conf /etc/nginx/conf.d/default.conf 
 
-
-
-CMD /bin/bash -c "envsubst '\$CLIENTPORT' '\$SERVERPORT' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
-
+CMD ["nginx", "-g", "daemon off;"]
