--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:14.14.0-alpine
-
-WORKDIR /app
-
-COPY ./package.json . 
+WORKDIR '/app'
+COPY package.json .
 RUN npm install
-
 COPY . .
-
-CMD ["npm","run","start"]
-
+RUN npm run build
+ 
+FROM nginx
+EXPOSE 3000
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=0 /app/build /usr/share/nginx/html
