--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,2 @@
 FROM nginx
-COPY ./default.prod.conf /etc/nginx/conf.d/default.conf 
-
-CMD ["nginx", "-g", "daemon off;"]
+COPY ./default.conf /etc/nginx/conf.d/default.conf 
