--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - api
       - client
     ports:
-      - "80:80"
+      - "3050:80"
   api:
     restart: always
     environment:
@@ -32,6 +32,7 @@ services:
     depends_on:
       - "db"
   client:
+    stdin_open: true
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_CLOUDINARYCLOUD=${REACT_APP_CLOUDINARYCLOUD}
