--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,12 @@ services:
       - DB=${DB}
       - DB_PASSWORD=${DB_PASSWORD}
       - JWTSECRET=${JWTSECRET}
+      - NODE_ENV=${NODE_ENV}
+      - RDS_DB_NAME=${RDS_DB_NAME}
+      - RDS_HOSTNAME=${RDS_HOSTNAME}
+      - RDS_PASSWORD=${RDS_PASSWORD}
+      - RDS_PORT=${RDS_PORT}
+      - RDS_USERNAME=${RDS_USERNAME}
     build:
       context: ./api
       dockerfile: Dockerfile
