--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,11 +1,11 @@
-# FROM node:14.14.0-alpine
+FROM node:14.14.0-alpine
 
-# WORKDIR /app
+WORKDIR /app
 
-# COPY ./package.json . 
-# RUN npm install
+COPY ./package.json . 
+RUN npm install
 
-# COPY . .
+COPY . .
 
-# CMD ["npm","run","start"]
+CMD ["npm","run","start"]
 
