--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     build:
       context: ./nginx
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     depends_on:
       - api
       - client
@@ -29,7 +29,7 @@ services:
       - RDS_USERNAME=${RDS_USERNAME}
     build:
       context: ./api
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "5000:5000"
     volumes:
@@ -45,7 +45,7 @@ services:
       - REACT_APP_CLOUDINARYPRESET=${REACT_APP_CLOUDINARYPRESET}
     build:
       context: ./client
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
